kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "30"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: azure/application-gateway
  name: backend
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: backend
            port:
              name: http
        path: /
        pathType: Prefix
    host: nowhere
  tls:
  - hosts:
    - nowhere
    secretName: backend-cert
